apps/vikunja/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress
  namespace: vikunja
spec:
  endpointSelector:
    matchLabels:
      app: vikunja

  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3456"
              protocol: TCP
